Updated config.properties page

--- a/framework/src/test/resources/config.properties
+++ b/framework/src/test/resources/config.properties
@@ -1,4 +1,3 @@
-url=www.google.com
-username = admin
+url=https://qalegend.com/mobile_service/panel/login
+username = admin@admin.com
 password=password
-product=mobile
