--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -33,6 +33,14 @@
   <artifactId>poi-ooxml</artifactId>
   <version>5.2.2</version>
 </dependency> 
+
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.7.1</version>
+    <scope>compile</scope>
+</dependency>
+
  
   </dependencies>
 </project>
