--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -34,13 +34,29 @@
   <version>5.2.2</version>
 </dependency> 
 
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.7.1</version>
-    <scope>compile</scope>
-</dependency>
+	<dependency>
+    		<groupId>org.testng</groupId>
+    		<artifactId>testng</artifactId>
+   			 <version>7.7.1</version>
+    		<scope>compile</scope>
+		</dependency>
 
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.1</version>
+		</dependency>
  
   </dependencies>
 </project>
